--- a/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
+++ b/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
@@ -56,7 +56,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = " /Users/maxuel/Desktop/cnr2.pcap /Users/maxuel/Desktop/hope /Users/maxuel/Desktop/frame0001.png"
+            argument = " /Users/maxuel/Desktop/cnr2.pcap /Users/maxuel/Desktop/hope /Users/maxuel/Desktop/"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
