inoltro(almeno in locale) per gstreamer

--- a/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
+++ b/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
@@ -52,12 +52,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "en0"
-            isEnabled = "NO">
+            argument = "lo0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = " /Users/maxuel/Desktop/cnr2.pcap /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
