Aggiunto supporto al loopback di linux

--- a/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
+++ b/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "lo0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
+            argument = "en0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
