statistiche fixate e file configurazione aggiunto
altri mix minori

--- a/Progetto/2parte/Receiver/ImagePicker/Config/config.conf
+++ b/Progetto/2parte/Receiver/ImagePicker/Config/config.conf
@@ -6,12 +6,11 @@ interfaccia_di_rete = lo0
 stat_port = 9998
 [Sender]
 pcap_file = /Users/maxuel/Desktop/cnr2.pcap
+port_rtp_pcap = 5000 
 cartella_gop = /Users/maxuel/Desktop/gopfolder/gop
 cartella_immagini = /Users/maxuel/Desktop/imgfolder/frame
 [Receiver]
 cartella_rec_gop = /Users/maxuel/Desktop/gopfolder_r/gop
 cartella_rec_immagini = /Users/maxuel/Desktop/imgfolder_r/frame
-lunghezza_finestra_statistiche = 200000 # in microsecondi
+lunghezza_finestra_statistiche = 200000 # in microsecondi, un intervallo troppo grande [ptrebbe creare problemi]
 num_decoder_thread = 2
-dim_gop_start = 500 # dimensione in bytes di sps s ssp
-dim_gop = 2000000 # dimensione in bytes di un array che memorizza temporaneamente il gop, aumentarlo se si hanno segmentation fault
