--- a/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
+++ b/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
@@ -53,8 +53,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "lo0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
+            argument = "lo0 1 5000 9998 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame /Users/maxuel/Desktop/imgfolder/frame 200000 2"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "lo0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = " /Users/maxuel/Desktop/cnr2.pcap /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
