--- a/Progetto/2parte/Receiver/ImagePicker/Config/config.conf
+++ b/Progetto/2parte/Receiver/ImagePicker/Config/config.conf
@@ -9,6 +9,11 @@ pcap_file = /Users/maxuel/Desktop/cnr2.pcap
 port_rtp_pcap = 5000 
 cartella_gop = /Users/maxuel/Desktop/gopfolder/gop
 cartella_immagini = /Users/maxuel/Desktop/imgfolder/frame
+gamma_evento = 10
+beta_evento = 20
+gamma_perdita = 2
+beta_perdita = 1
+delay = 0.2
 [Receiver]
 cartella_rec_gop = /Users/maxuel/Desktop/gopfolder_r/gop
 cartella_rec_immagini = /Users/maxuel/Desktop/imgfolder_r/frame
