--- a/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
+++ b/Progetto/2parte/Receiver/ImagePicker/ImagePicker.xcodeproj/xcshareddata/xcschemes/ImagePicker.xcscheme
@@ -53,8 +53,12 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "lo0 1 5000 9998 /Users/maxuel/Desktop/gopfolder_r/ /Users/maxuel/Desktop/imgfolder_r/ /Users/maxuel/Desktop/imgfolder/ 200000 1"
+            argument = "lo0 127.0.0.1 1 5000 9998 10001 /Users/maxuel/Desktop/gopfolder_r/ /Users/maxuel/Desktop/imgfolder_r/ /Users/maxuel/Desktop/imgfolder/ 200000 1"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "lo0 1 5000 9998 /Users/maxuel/Desktop/gopfolder_r/ /Users/maxuel/Desktop/imgfolder_r/ /Users/maxuel/Desktop/imgfolder/ 200000 1"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "lo0 /Users/maxuel/Desktop/gopfolder_r/gop /Users/maxuel/Desktop/imgfolder_r/frame"
