--- a/Finale/Config/ubuntu_sender.conf
+++ b/Finale/Config/ubuntu_sender.conf
@@ -6,6 +6,7 @@ from_port = 5000 # porta iniziale da cui ricevere i pacchetti
 stat_port = 9998 # porta in cui si ricevono le statistiche
 cartella_gop = gopfolder # cartella temporanea di lavoro
 cartella_immagini = imgfolder # cartella in cui vengono salvate le immagini
+simulate_mode = 1 # 1 è true, cioè si usano i valori di gamma sottostanti, 0 altrimenti
 gamma_evento = 10
 beta_evento = 20
 gamma_perdita = 2
