correzzione bug e implementazioni migliori

--- a/Finale/Config/ubuntu_sender.conf
+++ b/Finale/Config/ubuntu_sender.conf
@@ -4,12 +4,12 @@ ip_receiver = 127.0.0.1 # per inviare i pacchetti
 numero_di_canali = 1 # numero di sendere
 from_port = 5000 # porta iniziale da cui ricevere i pacchetti
 stat_port = 9998 # porta in cui si ricevono le statistiche
-cartella_gop = gopfolder # cartella temporanea di lavoro
-cartella_immagini = imgfolder # cartella in cui vengono salvate le immagini
-simulate_mode = 1 # 1 è true, cioè si usano i valori di gamma sottostanti, 0 altrimenti
-gamma_evento = 10
-beta_evento = 20
-gamma_perdita = 2
-beta_perdita = 1
-gamma_delay = 2
-beta_delay = 30
+cartella_gop = Imeges_dir/gopfolder # cartella temporanea di lavoro
+cartella_immagini = Imeges_dir/imgfolder # cartella in cui vengono salvate le immagini
+simulate_mode = 0 # 1 è true, cioè si usano i valori di gamma sottostanti, 0 altrimenti
+gamma_evento = 0.125
+beta_evento = 0.4
+gamma_perdita = 100
+beta_perdita = 0.01
+gamma_delay = 0.002
+beta_delay = 0.66
