--- a/Progetto/2parte/Receiver/ImagePicker/Config/ubuntu_sender.conf
+++ b/Progetto/2parte/Receiver/ImagePicker/Config/ubuntu_sender.conf
@@ -1,15 +1,14 @@
 pcap_file = /home/max/Scrivania/cnr2.pcap
 interfaccia_di_rete = lo # interfaccia in cui spedire i pacchetti
 ip_receiver = 127.0.0.1 # per inviare i pacchetti
-numero_di_canali = 1 # numero di sendere
+numero_di_canali = 3 # numero di sendere
 from_port = 5000 # porta iniziale da cui ricevere i pacchetti
 stat_port = 9998 # porta in cui si ricevono le statistiche
 cartella_gop = Imeges_dir/gopfolder # cartella temporanea di lavoro
 cartella_immagini = Imeges_dir/imgfolder # cartella in cui vengono salvate le immagini
 simulate_mode = 0 # 1 è true, cioè si usano i valori di gamma sottostanti, 0 altrimenti
-gamma_evento = 0.125
-beta_evento = 0.4
-gamma_perdita = 100
-beta_perdita = 0.01
-gamma_delay = 0.002
-beta_delay = 0.66
+# si susseguono valori alpha e scale, in ordine sono parametri di evento perdita,
+# cardinalità dei pacchetti da perdere e delay dei pacchetti
+canale = 0.125 0.4 100 0.01 0.002 0.66
+canale = 0.125 0.4 100 0.01 0.002 0.66
+canale = 0.125 0.4 100 0.01 0.002 0.66
