--- a/Finale/Config/sender.conf
+++ b/Finale/Config/sender.conf
@@ -1,7 +1,7 @@
 ##NETWORK
 #number of channels to be openened in TX - N channels
 number_of_links = 3
-#ports to be used to deliver the N flows, N as number_of_links - indicate the first port number, subsequent numbers will be used for the other flows and statistics - in this example, 3 links, thus 5000-5002 as tx ports and ??? for feedback
+#ports to be used to deliver the N flows, N as number_of_links - indicate the first port number, subsequent numbers will be used for the other flows and statistics - in this example, 3 links, thus 5000-5002 as tx ports
 port = 5000 
 #receiver IP from which statistics are received and to which the video flow will be sent
 receiver_IP = 127.0.0.1
