--- a/Progetto/2parte/Receiver/ImagePicker/Config/receiver.conf
+++ b/Progetto/2parte/Receiver/ImagePicker/Config/receiver.conf
@@ -1,7 +1,7 @@
 ##NETWORK
 #number of channels to be openened in RX
 number_of_links = 3
-#ports to be used to receive the N flows, N as number_of_links - indicate the first port number, subsequent numbers will be used for the other flows and statistics - in this example, 3 links, thus 5000-5002 as rx ports and ??? for feedback
+#ports to be used to receive the N flows, N as number_of_links - indicate the first port number, subsequent numbers will be used for the other flows and statistics - in this example, 3 links, thus 5000-5002 as rx ports
 port = 5000
 #sender IP to which sends back statistics
 sender_IP = 127.0.0.1
